--- a/laravel.conf
+++ b/laravel.conf
@@ -1,12 +1,145 @@
-<VirtualHost *:80>
-    ServerName localhost
+<VirtualHost *:443>
+    ServerName yopasshub.com
+    ServerAlias www.yopasshub.com
     DocumentRoot /var/www/html/web_app_rdp/public
 
+    # Configuration du répertoire principal
     <Directory /var/www/html/web_app_rdp/public>
+        Options -Indexes -MultiViews
         AllowOverride All
         Require all granted
+        DirectoryIndex index.php
+        
+        # Règles de réécriture Laravel
+        <IfModule mod_rewrite.c>
+            RewriteEngine On
+            
+            # Handle Authorization Header
+            RewriteCond %{HTTP:Authorization} .
+            RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+            
+            # Redirect Trailing Slashes If Not A Folder...
+            RewriteCond %{REQUEST_FILENAME} !-d
+            RewriteCond %{REQUEST_URI} (.+)/$
+            RewriteRule ^ %1 [L,R=301]
+            
+            # Send Requests To Front Controller...
+            RewriteCond %{REQUEST_FILENAME} !-d
+            RewriteCond %{REQUEST_FILENAME} !-f
+            RewriteRule ^ index.php [L]
+        </IfModule>
     </Directory>
 
-    ErrorLog /var/log/httpd/laravel-error.log
-    CustomLog /var/log/httpd/laravel-access.log combined
+    # Bloquer l'accès aux dossiers sensibles de Laravel
+    <Directory /var/www/html/web_app_rdp/app>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/bootstrap>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/config>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/database>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/resources>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/routes>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/storage>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/tests>
+        Require all denied
+    </Directory>
+
+    <Directory /var/www/html>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/vendor>
+        Require all denied
+    </Directory>
+
+    # Protection contre l'accès direct aux fichiers PHP (sauf index.php)
+    <FilesMatch "\.php$">
+        Require all denied
+    </FilesMatch>
+    
+    <FilesMatch "^index\.php$">
+        Require all granted
+    </FilesMatch>
+    
+    # Bloquer l'accès aux fichiers sensibles
+    <FilesMatch "\.(env|log|htaccess|htpasswd|ini|fla|psd|sh)$">
+        Require all denied
+    </FilesMatch>
+    
+    # Bloquer les fichiers de configuration
+    <Files ".env">
+        Require all denied
+    </Files>
+    
+    <Files "composer.json">
+        Require all denied
+    </Files>
+    
+    <Files "composer.lock">
+        Require all denied
+    </Files>
+    
+    <Files "artisan">
+        Require all denied
+    </Files>
+
+    # Optimisation du cache
+    <IfModule mod_expires.c>
+        ExpiresActive On
+        ExpiresByType text/css "access plus 1 month"
+        ExpiresByType application/javascript "access plus 1 month"
+        ExpiresByType image/png "access plus 1 month"
+        ExpiresByType image/jpg "access plus 1 month"
+        ExpiresByType image/jpeg "access plus 1 month"
+        ExpiresByType image/gif "access plus 1 month"
+        ExpiresByType image/svg+xml "access plus 1 month"
+        ExpiresByType image/webp "access plus 1 month"
+        ExpiresByType font/woff "access plus 1 year"
+        ExpiresByType font/woff2 "access plus 1 year"
+    </IfModule>
+    
+    # Compression GZIP
+    <IfModule mod_deflate.c>
+        AddOutputFilterByType DEFLATE text/plain
+        AddOutputFilterByType DEFLATE text/html
+        AddOutputFilterByType DEFLATE text/xml
+        AddOutputFilterByType DEFLATE text/css
+        AddOutputFilterByType DEFLATE application/xml
+        AddOutputFilterByType DEFLATE application/xhtml+xml
+        AddOutputFilterByType DEFLATE application/rss+xml
+        AddOutputFilterByType DEFLATE application/javascript
+        AddOutputFilterByType DEFLATE application/x-javascript
+        AddOutputFilterByType DEFLATE application/json
+    </IfModule>
+
+    # Headers de sécurité
+    <IfModule mod_headers.c>
+        Header always set X-Content-Type-Options nosniff
+        Header always set X-Frame-Options SAMEORIGIN
+        Header always set X-XSS-Protection "1; mode=block"
+        Header always set Referrer-Policy "strict-origin-when-cross-origin"
+    </IfModule>
+
+    # Logs (corrigé pour Apache sur Ubuntu/Debian)
+    ErrorLog /var/log/apache2/laravel-error.log
+    CustomLog /var/log/apache2/laravel-access.log combined
 </VirtualHost>
