--- a/laravel.conf
+++ b/laravel.conf
@@ -1,91 +1,60 @@
+# Dans /etc/apache2/ports.conf
+Listen 8001
+
 <VirtualHost *:8001>
     ServerName yopasshub.com
     ServerAlias www.yopasshub.com
     DocumentRoot /var/www/html/web_app_rdp/public
 
-    # Configuration du répertoire principal
+    # Configuration du répertoire principal avec règles de réécriture
     <Directory /var/www/html/web_app_rdp/public>
-        Options -Indexes -MultiViews
+        Options -Indexes -MultiViews +FollowSymLinks
         AllowOverride All
         Require all granted
         DirectoryIndex index.php
-        
-        # Règles de réécriture Laravel
-        <IfModule mod_rewrite.c>
-            RewriteEngine On
-            
-            # Handle Authorization Header
-            RewriteCond %{HTTP:Authorization} .
-            RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-            
-            # Redirect Trailing Slashes If Not A Folder...
-            RewriteCond %{REQUEST_FILENAME} !-d
-            RewriteCond %{REQUEST_URI} (.+)/$
-            RewriteRule ^ %1 [L,R=301]
-            
-            # Send Requests To Front Controller...
-            RewriteCond %{REQUEST_FILENAME} !-d
-            RewriteCond %{REQUEST_FILENAME} !-f
-            RewriteRule ^ index.php [L]
-        </IfModule>
     </Directory>
+
+    # Configuration globale des rewrites (importante pour Laravel)
+    <IfModule mod_rewrite.c>
+        RewriteEngine On
+        
+        # Log des rewrites pour debug (à désactiver en production)
+        # RewriteLog /var/log/apache2/rewrite.log
+        # RewriteLogLevel 3
+        
+        # Force toutes les requêtes vers le dossier public si elles ne s'y trouvent pas
+        RewriteCond %{REQUEST_URI} !^/public/
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule ^(.*)$ /public/$1 [L]
+    </IfModule>
 
     # Bloquer l'accès aux dossiers sensibles de Laravel
-    <Directory /var/www/html/web_app_rdp/app>
+    <DirectoryMatch "^/var/www/html/web_app_rdp/(app|bootstrap|config|database|resources|routes|storage|tests|vendor)">
         Require all denied
-    </Directory>
-    
-    <Directory /var/www/html/web_app_rdp/bootstrap>
-        Require all denied
-    </Directory>
-    
-    <Directory /var/www/html/web_app_rdp/config>
-        Require all denied
-    </Directory>
-    
-    <Directory /var/www/html/web_app_rdp/database>
-        Require all denied
-    </Directory>
-    
-    <Directory /var/www/html/web_app_rdp/resources>
-        Require all denied
-    </Directory>
-    
-    <Directory /var/www/html/web_app_rdp/routes>
-        Require all denied
-    </Directory>
-    
-    <Directory /var/www/html/web_app_rdp/storage>
-        Require all denied
-    </Directory>
-    
-    <Directory /var/www/html/web_app_rdp/tests>
-        Require all denied
-    </Directory>
+    </DirectoryMatch>
 
-    <Directory /var/www/html>
-        Require all denied
+    # Configuration PHP - permettre l'exécution dans public seulement
+    <Directory /var/www/html/web_app_rdp/public>
+        <FilesMatch "\.php$">
+            Require all granted
+            SetHandler application/x-httpd-php
+        </FilesMatch>
     </Directory>
     
-    <Directory /var/www/html/web_app_rdp/vendor>
-        Require all denied
-    </Directory>
-
-    # Protection contre l'accès direct aux fichiers PHP (sauf index.php)
-    <FilesMatch "\.php$">
-        Require all denied
-    </FilesMatch>
-    
-    <FilesMatch "^index\.php$">
-        Require all granted
-    </FilesMatch>
+    # Bloquer PHP partout ailleurs
+    <DirectoryMatch "^/var/www/html/web_app_rdp/(?!public)">
+        <FilesMatch "\.php$">
+            Require all denied
+        </FilesMatch>
+    </DirectoryMatch>
     
     # Bloquer l'accès aux fichiers sensibles
-    <FilesMatch "\.(env|log|htaccess|htpasswd|ini|fla|psd|sh)$">
+    <FilesMatch "\.(env|log|htaccess|htpasswd|ini|fla|psd|sh|sql)$">
         Require all denied
     </FilesMatch>
     
-    # Bloquer les fichiers de configuration
+    # Bloquer les fichiers de configuration Laravel
     <Files ".env">
         Require all denied
     </Files>
@@ -101,6 +70,16 @@
     <Files "artisan">
         Require all denied
     </Files>
+
+    # Configuration pour supporter les headers HTTP nécessaires à Laravel
+    <IfModule mod_headers.c>
+        # Permettre les headers Laravel
+        Header always set Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With"
+        Header always set X-Content-Type-Options nosniff
+        Header always set X-Frame-Options SAMEORIGIN
+        Header always set X-XSS-Protection "1; mode=block"
+        Header always set Referrer-Policy "strict-origin-when-cross-origin"
+    </IfModule>
 
     # Optimisation du cache
     <IfModule mod_expires.c>
@@ -131,15 +110,8 @@
         AddOutputFilterByType DEFLATE application/json
     </IfModule>
 
-    # Headers de sécurité
-    <IfModule mod_headers.c>
-        Header always set X-Content-Type-Options nosniff
-        Header always set X-Frame-Options SAMEORIGIN
-        Header always set X-XSS-Protection "1; mode=block"
-        Header always set Referrer-Policy "strict-origin-when-cross-origin"
-    </IfModule>
-
-    # Logs (corrigé pour Apache sur Ubuntu/Debian)
-    ErrorLog /var/log/apache2/laravel-error.log
-    CustomLog /var/log/apache2/laravel-access.log combined
+    # Logs avec plus de détails
+    ErrorLog /var/log/httpd/laravel-error.log
+    CustomLog /var/log/httpd/laravel-access.log combined
+    LogLevel info rewrite:trace3
 </VirtualHost>
