--- a/laravel.conf
+++ b/laravel.conf
@@ -1,61 +1,71 @@
-# Dans /etc/apache2/ports.conf
-Listen 8001
-
-<VirtualHost *:8001>
+<VirtualHost *:443>
     ServerName yopasshub.com
     ServerAlias www.yopasshub.com
     DocumentRoot /var/www/html/web_app_rdp/public
 
-    # Configuration du répertoire principal avec règles de réécriture
+    # Configuration du dossier public principal
     <Directory /var/www/html/web_app_rdp/public>
-        Options -Indexes -MultiViews +FollowSymLinks
         AllowOverride All
         Require all granted
         DirectoryIndex index.php
+        Options -Indexes
+        
+        # Protection contre l'exécution de fichiers uploadés
+        <FilesMatch "\.(php|phtml|php3|php4|php5|pl|py|jsp|asp|sh|cgi)$">
+            <RequireAll>
+                Require all denied
+            </RequireAll>
+        </FilesMatch>
+        
+        # Autoriser seulement index.php dans public
+        <FilesMatch "^index\.php$">
+            Require all granted
+        </FilesMatch>
     </Directory>
-
-    # Configuration globale des rewrites (importante pour Laravel)
-    <IfModule mod_rewrite.c>
-        RewriteEngine On
-        
-        # Log des rewrites pour debug (à désactiver en production)
-        # RewriteLog /var/log/apache2/rewrite.log
-        # RewriteLogLevel 3
-        
-        # Force toutes les requêtes vers le dossier public si elles ne s'y trouvent pas
-        RewriteCond %{REQUEST_URI} !^/public/
-        RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteCond %{REQUEST_FILENAME} !-d
-        RewriteRule ^(.*)$ /public/$1 [L]
-    </IfModule>
 
     # Bloquer l'accès aux dossiers sensibles de Laravel
-    <DirectoryMatch "^/var/www/html/web_app_rdp/(app|bootstrap|config|database|resources|routes|storage|tests|vendor)">
+    <Directory /var/www/html/web_app_rdp/app>
         Require all denied
-    </DirectoryMatch>
-
-    # Configuration PHP - permettre l'exécution dans public seulement
-    <Directory /var/www/html/web_app_rdp/public>
-        <FilesMatch "\.php$">
-            Require all granted
-            SetHandler application/x-httpd-php
-        </FilesMatch>
     </Directory>
     
-    # Bloquer PHP partout ailleurs
-    <DirectoryMatch "^/var/www/html/web_app_rdp/(?!public)">
-        <FilesMatch "\.php$">
-            Require all denied
-        </FilesMatch>
-    </DirectoryMatch>
-    
-    # Bloquer l'accès aux fichiers sensibles
-    <FilesMatch "\.(env|log|htaccess|htpasswd|ini|fla|psd|sh|sql)$">
+    <Directory /var/www/html/web_app_rdp/bootstrap>
         Require all denied
-    </FilesMatch>
+    </Directory>
     
-    # Bloquer les fichiers de configuration Laravel
+    <Directory /var/www/html/web_app_rdp/config>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/database>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/resources>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/routes>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/storage>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/tests>
+        Require all denied
+    </Directory>
+    
+    <Directory /var/www/html/web_app_rdp/vendor>
+        Require all denied
+    </Directory>
+
+    # Bloquer l'accès aux fichiers sensibles
     <Files ".env">
+        Require all denied
+    </Files>
+    
+    <Files ".env.*">
         Require all denied
     </Files>
     
@@ -67,51 +77,39 @@ Listen 8001
         Require all denied
     </Files>
     
+    <Files "package.json">
+        Require all denied
+    </Files>
+    
     <Files "artisan">
         Require all denied
     </Files>
-
-    # Configuration pour supporter les headers HTTP nécessaires à Laravel
-    <IfModule mod_headers.c>
-        # Permettre les headers Laravel
-        Header always set Access-Control-Allow-Headers "Authorization, Content-Type, X-Requested-With"
-        Header always set X-Content-Type-Options nosniff
-        Header always set X-Frame-Options SAMEORIGIN
-        Header always set X-XSS-Protection "1; mode=block"
-        Header always set Referrer-Policy "strict-origin-when-cross-origin"
-    </IfModule>
-
-    # Optimisation du cache
-    <IfModule mod_expires.c>
-        ExpiresActive On
-        ExpiresByType text/css "access plus 1 month"
-        ExpiresByType application/javascript "access plus 1 month"
-        ExpiresByType image/png "access plus 1 month"
-        ExpiresByType image/jpg "access plus 1 month"
-        ExpiresByType image/jpeg "access plus 1 month"
-        ExpiresByType image/gif "access plus 1 month"
-        ExpiresByType image/svg+xml "access plus 1 month"
-        ExpiresByType image/webp "access plus 1 month"
-        ExpiresByType font/woff "access plus 1 year"
-        ExpiresByType font/woff2 "access plus 1 year"
-    </IfModule>
     
-    # Compression GZIP
-    <IfModule mod_deflate.c>
-        AddOutputFilterByType DEFLATE text/plain
-        AddOutputFilterByType DEFLATE text/html
-        AddOutputFilterByType DEFLATE text/xml
-        AddOutputFilterByType DEFLATE text/css
-        AddOutputFilterByType DEFLATE application/xml
-        AddOutputFilterByType DEFLATE application/xhtml+xml
-        AddOutputFilterByType DEFLATE application/rss+xml
-        AddOutputFilterByType DEFLATE application/javascript
-        AddOutputFilterByType DEFLATE application/x-javascript
-        AddOutputFilterByType DEFLATE application/json
-    </IfModule>
+    <Files "*.log">
+        Require all denied
+    </Files>
 
-    # Logs avec plus de détails
-    ErrorLog /var/log/httpd/laravel-error.log
-    CustomLog /var/log/httpd/laravel-access.log combined
-    LogLevel info rewrite:trace3
+    # Rediriger toutes les requêtes vers le dossier public si elles ne s'y trouvent pas déjà
+    RewriteEngine On
+    RewriteCond %{REQUEST_URI} !^/public/
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^(.*)$ /public/$1 [L,R=301]
+
+    # Configuration SSL (ajoutez vos certificats)
+    SSLEngine on
+    SSLCertificateFile /path/to/your/certificate.crt
+    SSLCertificateKeyFile /path/to/your/private.key
+    # SSLCertificateChainFile /path/to/your/chain.crt  # Si nécessaire
+
+    # Headers de sécurité
+    Header always set X-Content-Type-Options nosniff
+    Header always set X-Frame-Options DENY
+    Header always set X-XSS-Protection "1; mode=block"
+    Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
+    Header always set Referrer-Policy "strict-origin-when-cross-origin"
+
+    ErrorLog /var/log/apache2/laravel-error.log
+    CustomLog /var/log/apache2/laravel-access.log combined
 </VirtualHost>
+
