--- a/laravel.conf
+++ b/laravel.conf
@@ -3,24 +3,31 @@
     ServerAlias www.yopasshub.com
     DocumentRoot /var/www/html/web_app_rdp/public
 
-    # Configuration du dossier public principal
+    # Configuration du répertoire principal
     <Directory /var/www/html/web_app_rdp/public>
+        Options -Indexes -MultiViews
         AllowOverride All
         Require all granted
         DirectoryIndex index.php
-        Options -Indexes
         
-        # Protection contre l'exécution de fichiers uploadés
-        <FilesMatch "\.(php|phtml|php3|php4|php5|pl|py|jsp|asp|sh|cgi)$">
-            <RequireAll>
-                Require all denied
-            </RequireAll>
-        </FilesMatch>
-        
-        # Autoriser seulement index.php dans public
-        <FilesMatch "^index\.php$">
-            Require all granted
-        </FilesMatch>
+        # Règles de réécriture Laravel
+        <IfModule mod_rewrite.c>
+            RewriteEngine On
+            
+            # Handle Authorization Header
+            RewriteCond %{HTTP:Authorization} .
+            RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+            
+            # Redirect Trailing Slashes If Not A Folder...
+            RewriteCond %{REQUEST_FILENAME} !-d
+            RewriteCond %{REQUEST_URI} (.+)/$
+            RewriteRule ^ %1 [L,R=301]
+            
+            # Send Requests To Front Controller...
+            RewriteCond %{REQUEST_FILENAME} !-d
+            RewriteCond %{REQUEST_FILENAME} !-f
+            RewriteRule ^ index.php [L]
+        </IfModule>
     </Directory>
 
     # Bloquer l'accès aux dossiers sensibles de Laravel
@@ -60,12 +67,22 @@
         Require all denied
     </Directory>
 
-    # Bloquer l'accès aux fichiers sensibles
-    <Files ".env">
+    # Protection contre l'accès direct aux fichiers PHP (sauf index.php)
+    <FilesMatch "\.php$">
         Require all denied
-    </Files>
+    </FilesMatch>
     
-    <Files ".env.*">
+    <FilesMatch "^index\.php$">
+        Require all granted
+    </FilesMatch>
+    
+    # Bloquer l'accès aux fichiers sensibles
+    <FilesMatch "\.(env|log|htaccess|htpasswd|ini|fla|psd|sh)$">
+        Require all denied
+    </FilesMatch>
+    
+    # Bloquer les fichiers de configuration
+    <Files ".env">
         Require all denied
     </Files>
     
@@ -77,39 +94,48 @@
         Require all denied
     </Files>
     
-    <Files "package.json">
-        Require all denied
-    </Files>
-    
     <Files "artisan">
         Require all denied
     </Files>
+
+    # Optimisation du cache
+    <IfModule mod_expires.c>
+        ExpiresActive On
+        ExpiresByType text/css "access plus 1 month"
+        ExpiresByType application/javascript "access plus 1 month"
+        ExpiresByType image/png "access plus 1 month"
+        ExpiresByType image/jpg "access plus 1 month"
+        ExpiresByType image/jpeg "access plus 1 month"
+        ExpiresByType image/gif "access plus 1 month"
+        ExpiresByType image/svg+xml "access plus 1 month"
+        ExpiresByType image/webp "access plus 1 month"
+        ExpiresByType font/woff "access plus 1 year"
+        ExpiresByType font/woff2 "access plus 1 year"
+    </IfModule>
     
-    <Files "*.log">
-        Require all denied
-    </Files>
-
-    # Rediriger toutes les requêtes vers le dossier public si elles ne s'y trouvent pas déjà
-    RewriteEngine On
-    RewriteCond %{REQUEST_URI} !^/public/
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ /public/$1 [L,R=301]
-
-    # Configuration SSL (ajoutez vos certificats)
-    SSLEngine on
-    SSLCertificateFile /path/to/your/certificate.crt
-    SSLCertificateKeyFile /path/to/your/private.key
-    # SSLCertificateChainFile /path/to/your/chain.crt  # Si nécessaire
+    # Compression GZIP
+    <IfModule mod_deflate.c>
+        AddOutputFilterByType DEFLATE text/plain
+        AddOutputFilterByType DEFLATE text/html
+        AddOutputFilterByType DEFLATE text/xml
+        AddOutputFilterByType DEFLATE text/css
+        AddOutputFilterByType DEFLATE application/xml
+        AddOutputFilterByType DEFLATE application/xhtml+xml
+        AddOutputFilterByType DEFLATE application/rss+xml
+        AddOutputFilterByType DEFLATE application/javascript
+        AddOutputFilterByType DEFLATE application/x-javascript
+        AddOutputFilterByType DEFLATE application/json
+    </IfModule>
 
     # Headers de sécurité
-    Header always set X-Content-Type-Options nosniff
-    Header always set X-Frame-Options DENY
-    Header always set X-XSS-Protection "1; mode=block"
-    Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
-    Header always set Referrer-Policy "strict-origin-when-cross-origin"
+    <IfModule mod_headers.c>
+        Header always set X-Content-Type-Options nosniff
+        Header always set X-Frame-Options SAMEORIGIN
+        Header always set X-XSS-Protection "1; mode=block"
+        Header always set Referrer-Policy "strict-origin-when-cross-origin"
+    </IfModule>
 
-    ErrorLog /var/log/apache2/laravel-error.log
-    CustomLog /var/log/apache2/laravel-access.log combined
+    # Logs (corrigé pour Apache sur Ubuntu/Debian)
+    ErrorLog /var/log/httpd/laravel-error.log
+    CustomLog /var/log/httpd/laravel-access.log combined
 </VirtualHost>
-
